tests/rosetta/out/Dart/chinese-zodiac.error
run error: exit status 254
../../tests/rosetta/out/Dart/chinese-zodiac.dart:25:15: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
  var sb = sc[stem] + bc[branch];
              ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:25:26: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
  var sb = sc[stem] + bc[branch];
                         ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:26:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
  return Info(animal[branch].toString(), yinYang[(stem as num) % 2].toString(), element[int.parse(((stem as num) / 2))].toString(), sb, ((y as num) % 60 as num) + 1);
                     ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:26:64: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
  return Info(animal[branch].toString(), yinYang[(stem as num) % 2].toString(), element[int.parse(((stem as num) / 2))].toString(), sb, ((y as num) % 60 as num) + 1);
                                                               ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:26:114: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
  return Info(animal[branch].toString(), yinYang[(stem as num) % 2].toString(), element[int.parse(((stem as num) / 2))].toString(), sb, ((y as num) % 60 as num) + 1);
                                                                                                                 ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:26:162: Error: The argument type 'num' can't be assigned to the parameter type 'int'.
  return Info(animal[branch].toString(), yinYang[(stem as num) % 2].toString(), element[int.parse(((stem as num) / 2))].toString(), sb, ((y as num) % 60 as num) + 1);
                                                                                                                                                                 ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:32:35: Error: The operator '[]' isn't defined for the class 'Info'.
 - 'Info' is from '../../tests/rosetta/out/Dart/chinese-zodiac.dart'.
Try correcting the operator to an existing operator, or defining a '[]' operator.
    print(yr.toString() + ': ' + r['element'] + ' ' + r['animal'] + ', ' + r['yinYang'] + ', Cycle year ' + r['cycle'].toString() + ' ' + r['stemBranch']);
                                  ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:32:56: Error: The operator '[]' isn't defined for the class 'Info'.
 - 'Info' is from '../../tests/rosetta/out/Dart/chinese-zodiac.dart'.
Try correcting the operator to an existing operator, or defining a '[]' operator.
    print(yr.toString() + ': ' + r['element'] + ' ' + r['animal'] + ', ' + r['yinYang'] + ', Cycle year ' + r['cycle'].toString() + ' ' + r['stemBranch']);
                                                       ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:32:77: Error: The operator '[]' isn't defined for the class 'Info'.
 - 'Info' is from '../../tests/rosetta/out/Dart/chinese-zodiac.dart'.
Try correcting the operator to an existing operator, or defining a '[]' operator.
    print(yr.toString() + ': ' + r['element'] + ' ' + r['animal'] + ', ' + r['yinYang'] + ', Cycle year ' + r['cycle'].toString() + ' ' + r['stemBranch']);
                                                                            ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:32:110: Error: The operator '[]' isn't defined for the class 'Info'.
 - 'Info' is from '../../tests/rosetta/out/Dart/chinese-zodiac.dart'.
Try correcting the operator to an existing operator, or defining a '[]' operator.
    print(yr.toString() + ': ' + r['element'] + ' ' + r['animal'] + ', ' + r['yinYang'] + ', Cycle year ' + r['cycle'].toString() + ' ' + r['stemBranch']);
                                                                                                             ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:32:140: Error: The operator '[]' isn't defined for the class 'Info'.
 - 'Info' is from '../../tests/rosetta/out/Dart/chinese-zodiac.dart'.
Try correcting the operator to an existing operator, or defining a '[]' operator.
    print(yr.toString() + ': ' + r['element'] + ' ' + r['animal'] + ', ' + r['yinYang'] + ', Cycle year ' + r['cycle'].toString() + ' ' + r['stemBranch']);
                                                                                                                                           ^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:57:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:86:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:91:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/chinese-zodiac.dart:95:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
